--- a/frontend/src/tracker/style.css
+++ b/frontend/src/tracker/style.css
@@ -1,3 +1,60 @@
 .tracker {
-    
+    margin: 12px;
+    width: 345px;
+    height: 780px;;
+    overflow: scroll;
+}
+.container {
+    display: flex;
+    gap: 10px;
+}
+.ownerWrapper {
+    width: 100px;
+    position: relative;
+}
+.ownerTitle {
+    width: 100px;
+    height: 20px; 
+    background-color: burlywood;
+    color: #000;
+    text-align: center;
+    margin: 0 0 10px 0;
+}
+.diver {
+    border-top: 1px solid rgb(196, 196, 196);
+    width: 100%;
+    height: 10px;
+}
+.owner {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    align-items: center;
+    align-content: center;
+}
+.preview-todo {
+    width: 85px;
+    height: 60px;
+    background-color: #BDBDBD;
+}
+.preview-inprocess {
+    width: 85px;
+    height: 60px;
+    background-color: #FAC710;
+}
+.preview-done {
+    width: 85px;
+    height: 60px;
+    background-color: #2D9BF0;
+}
+.preview-undermodified {
+    width: 85px;
+    height: 60px;
+    background-color: #F24726;
+}
+.state {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
